# modulation_fun

./: .gitignore  AGENTS.md  pyproject.toml  setup.cfg
app/: streamlit_app.py
docs/: 00-vision.md  10-requirements.md  20-architecture.md  30-backlog.md  definition-of-done.md
src/waveform_app/: __init__.py
src/waveform_app/lesson1/: __init__.py  models.py  stages.py  validation.py
tests/: test_lesson1_stages.py  test_matched_filter.py  test_placeholder.py  test_validation.py
