[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveform-app"
version = "0.1.0"
description = "Educational Waveform Teaching App - Lesson 1 scaffolding"
authors = [{ name = "Waveform App Team" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "streamlit>=1.30",
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
