[metadata]
name = waveform-app
version = 0.1.0
description = Educational Waveform Teaching App - Lesson 1 scaffolding
author = Waveform App Team

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.26
    matplotlib>=3.8
    streamlit>=1.30
    pytest>=8.0

[options.packages.find]
where = src
